refactor: Fetch all injuries for an accident by ID
