# backend/docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /api/v1
 definitions:
   models.Accident:
     properties:
@@ -94,15 +93,6 @@ definitions:
       message:
         type: string
     type: object
-  models.ImagesForAircraftResponse:
-    properties:
-      aircraft_id:
-        type: integer
-      images:
-        items:
-          $ref: '#/definitions/models.AircraftImage'
-        type: array
-    type: object
   models.Injury:
     properties:
       accident_id:
@@ -118,13 +108,10 @@ definitions:
     type: object
 info:
   contact: {}
-  description: API server for airaccidentdata.com
-  title: AirAccidentData API
-  version: "1.0"
 paths:
   /accidents:
     get:
-      description: Get a list of all aviation accidents
+      description: Get a list of all aviation accidents with pagination.
       parameters:
       - description: Page number
         in: query
@@ -138,7 +125,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Accidents data with pagination details
           schema:
             $ref: '#/definitions/models.AccidentPaginatedResponse'
         "400":
@@ -165,9 +152,9 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Detailed accident data
           schema:
-            $ref: '#/definitions/models.Aircraft'
+            $ref: '#/definitions/models.Accident'
         "400":
           description: Invalid accident ID
           schema:
@@ -185,7 +172,7 @@ paths:
       - Accidents
   /aircrafts:
     get:
-      description: Retrieve a list of all aircrafts.
+      description: Retrieve a list of all aircrafts with pagination.
       parameters:
       - description: Page number
         in: query
@@ -226,7 +213,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Detailed aircraft data
           schema:
             $ref: '#/definitions/models.Aircraft'
         "400":
@@ -257,9 +244,11 @@ paths:
       - application/json
       responses:
         "200":
-          description: Image IDs, Image URLs, and S3 URLs
+          description: List of aircraft images
           schema:
-            $ref: '#/definitions/models.ImagesForAircraftResponse'
+            items:
+              $ref: '#/definitions/models.AircraftImage'
+            type: array
         "400":
           description: Invalid aircraft ID
           schema:
@@ -277,9 +266,9 @@ paths:
       - Aircrafts
   /injuries/{id}:
     get:
-      description: Retrieve injuries for an accident.
+      description: Retrieve injury details for an accident based on the provided ID.
       parameters:
-      - description: Aircraft ID
+      - description: Accident ID
         in: path
         name: id
         required: true
@@ -288,15 +277,17 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: List of injuries associated with the accident
           schema:
-            $ref: '#/definitions/models.Injury'
+            items:
+              $ref: '#/definitions/models.Injury'
+            type: array
         "400":
-          description: Invalid accident ID
+          description: Invalid accident ID provided
           schema:
             $ref: '#/definitions/models.ErrorResponse'
         "404":
-          description: Accident not found
+          description: No injuries found for the specified accident ID
           schema:
             $ref: '#/definitions/models.ErrorResponse'
         "500":
